add ubah dokumen

--- a/ubah-lahan-pabrik.html
+++ b/ubah-lahan-pabrik.html
@@ -139,13 +139,13 @@
                     <div class="row no-padding">
                         <ul class="nav nav-tabs col no-padding text-center">
                             <li class="nav-item col-md-3">
-                                <a class="nav-link active" data-toggle="tab" data-target="#biodataPT">Biodata Perusahaan</a>
+                                <a class="nav-link" data-toggle="tab" data-target="#biodataPT">Biodata Perusahaan</a>
                             </li>
                             <li class="nav-item col-md-3">
-                                <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Alamat</a>
+                                <a class="nav-link" data-toggle="tab" data-target="#biodataPT">Alamat</a>
                             </li>
                             <li class="nav-item col-md-3">
-                                <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Info Lahan / Kebun</a>
+                                <a class="nav-link active" data-toggle="tab" data-target="#biodataPT">Info Lahan / Kebun</a>
                             </li>
                             <li class="nav-item col-md-3">
                                 <a class="nav-link disabled" data-toggle="tab" data-target="#biodataPT">Dokumen</a>
@@ -155,7 +155,7 @@
                   </div>
                 <div class="tab-content card-body">
                   <form id="biodataPT">
-                    <div class="col-md-6">
+                    <div class="col-md-4">
                       <div class="form-group">
                           <label for="" class="">Head Office<span class="text-danger"> *</span></label>
                           <div class="btn-group d-block btn-group-toggle" data-toggle="buttons">
@@ -170,44 +170,31 @@
                               <div class="invalid-feedback">Mohon isi kolom ini</div>
                           </div>
                       </div>
+                    </div>
+                    <div class="col-md-4">
                       <div class="form-group">
-                          <label for="" class="">Nama Perusahaan</label>
-                          <input type="text" id="" class="form-control" placeholder="Perusahaan Anda">
-                      </div>
-                      <div class="form-group">
-                          <label for="" class="">Jumlah Karyawan</label>
-                          <input type="text" id="" class="form-control" placeholder="">
-                      </div>
-                      <div class="form-group">
-                          <label for="" class="">Website<span class="text-danger"> *</span></label>
-                          <input type="text" id="" class="form-control" placeholder="www.perusahaan.com" required>
+                          <label for="" class="">Kapasitas<span class="text-danger"> *</span></label>
+                          <select class="custom-select no-margin" id="inputGroupSelect">
+                            <option selected>- Pilih -</option>
+                            <option value="5">5</option>
+                            <option value="10">10</option>
+                            <option value="15">15</option>
+                          </select>
+                          <label class="checkwrap mt-2">
+                              <input type="checkbox" value=""> Line Extendable
+                              <span class="checkmark"></span>
+                          </label>
                           <div class="invalid-feedback">Mohon isi kolom ini</div>
                       </div>
                     </div>
-                    <div class="col-md-6">
-                      <h4 class="font-weight-bold mb-3">PIC</h4>
-                      <div class="form-group">
-                          <label for="" class="">Nama PIC<span class="text-danger"> *</span></label>
-                          <input type="text" id="" class="form-control" placeholder="Nama PIC" required>
-                          <div class="invalid-feedback">Mohon isi kolom ini</div>
-                      </div>
-                      <div class="form-group">
-                          <label for="" class="">Nomor Telepon<span class="text-danger"> *</span></label>
-                          <input type="text" id="" class="form-control" placeholder="Nomor Telepon PIC" required>
-                          <div class="invalid-feedback">Mohon isi kolom ini</div>
-                      </div>
-                      <div class="form-group">
-                          <label for="" class="">Email<span class="text-danger"> *</span></label>
-                          <input type="email" id="" class="form-control" placeholder="Email PIC" required>
-                          <div class="invalid-feedback">Mohon isi kolom ini</div>
-                      </div>
+                    <div class="col-md-4">
                     </div>
                   </form>
                 </div>
                 <div class="card-footer">
                   <div class="row no-margin">
-                    <div class="col no-padding-left"><a href="profil-pabrik.html" class="btn btn-secondary btn-block">Batal</a></div>
-                    <div class="col no-padding-right"><a href="ubah-alamat-pabrik.html" class="btn btn-primary btn-block">Selanjutnya</a></div>
+                    <div class="col no-padding-left"><a href="ubah-lahan-pabrik.html" class="btn btn-secondary btn-block">Kembali</a></div>
+                    <div class="col no-padding-right"><a href="ubah-dokumen-pabrik.html" class="btn btn-primary btn-block">Selanjutnya</a></div>
                   </div>
                 </div>
               </div>
@@ -267,6 +254,20 @@
 
 
     <!-- jQuery -->
+    <script>
+      let map;
+      function initMap() {
+        map = new google.maps.Map(document.getElementById("map"), {
+          center: { lat: -34.397, lng: 150.644 },
+          zoom: 8,
+        });
+      }
+    </script>
+    <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBIwzALxUPNbatRBj3Xi1Uhp0fFzwWNBkE&callback=initMap&libraries=&v=weekly"
+    defer
+  ></script>
+    </script>
     <script src="assets/libs/jquery/jquery.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
     <script src="assets/libs/jquery-ui/jquery-ui.min.js"></script>
