--- a/ubah-alamat-pabrik.html
+++ b/ubah-alamat-pabrik.html
@@ -221,7 +221,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="row no-margin">
-                    <div class="col no-padding-left"><a href="ubah-profil-pabrik.html" class="btn btn-secondary btn-block">Kembali</a></div>
+                    <div class="col no-padding-left"><a href="ubah-profil-pabrik.html" class="btn btn-secondary btn-block">Sebelumnya</a></div>
                     <div class="col no-padding-right"><a href="ubah-lahan-pabrik.html" class="btn btn-primary btn-block">Selanjutnya</a></div>
                   </div>
                 </div>
