--- a/ubah-lahan-pabrik.html
+++ b/ubah-lahan-pabrik.html
@@ -193,7 +193,7 @@
                 </div>
                 <div class="card-footer">
                   <div class="row no-margin">
-                    <div class="col no-padding-left"><a href="ubah-lahan-pabrik.html" class="btn btn-secondary btn-block">Kembali</a></div>
+                    <div class="col no-padding-left"><a href="ubah-lahan-pabrik.html" class="btn btn-secondary btn-block">Sebelumnya</a></div>
                     <div class="col no-padding-right"><a href="ubah-dokumen-pabrik.html" class="btn btn-primary btn-block">Selanjutnya</a></div>
                   </div>
                 </div>
