update petani page

--- a/ubah-lahan-pabrik.html
+++ b/ubah-lahan-pabrik.html
@@ -174,7 +174,7 @@
                     <div class="col-md-4">
                       <div class="form-group">
                           <label for="" class="">Kapasitas<span class="text-danger"> *</span></label>
-                          <select class="custom-select no-margin" id="inputGroupSelect">
+                          <select class="form-control no-margin" id="inputGroupSelect">
                             <option selected>- Pilih -</option>
                             <option value="5">5</option>
                             <option value="10">10</option>
