--- a/penerimaan-petani.html
+++ b/penerimaan-petani.html
@@ -185,7 +185,7 @@
                 <td>Kebun 1</td>
                 <td>Kebun Sektor 2</td>
                 <td>40.000 Kg</td>
-                <td><a data-toggle="modal" data-target="#detailPenerimaan"><span class="fa fa-eye orange ml-2"></span></a></td>
+                <td><a type="button" data-toggle="modal" data-target="#detailPenerimaan"><span class="fa fa-eye orange ml-2"></span></a></td>
               </tr>
               <tr>
                 <td>3</td>
@@ -238,16 +238,16 @@
                   <div class="col-md-12 no-padding">
                     <h6 class="green font-weight-bold mb-3">Petani</h6>
                     <div class="form-group">
-                        <p class="mb-0">Kartika Wati</p>
-                        <b>08123456789</b>
+                        <input type="text" class="form-control-plaintext" value="Kartika Wati" readonly disabled>
+                        <label class="">08123456789</label>
                     </div>
                     <div class="form-group">
-                        <p class="mb-0">Diana Santri</p>
-                        <b>08123456789</b>
+                        <input type="text" class="form-control-plaintext" value="Diana Santri" readonly disabled>
+                        <label class="">08123456789</label>
                     </div>
                     <div class="form-group">
-                        <p class="mb-0">Jaro Petang</p>
-                        <b>089567827228</b>
+                        <input type="text" class="form-control-plaintext" value="Jaro Petang" readonly disabled>
+                        <label class="">089567827228</label>
                     </div>
                   </div>
               </div>
