--- a/list-harga.html
+++ b/list-harga.html
@@ -236,7 +236,7 @@
             <div class="modal-footer">
               <div class="row no-margin">
                   <div class="col pl-0">
-                      <a  href="" class="btn btn-secondary btn-block">Kembali</a>
+                      <a data-dismiss="modal" class="btn btn-secondary btn-block">Kembali</a>
                   </div>
                   <div class="col pr-0">
                       <a href="" class="btn btn-secondary-gradient btn-block">Simpan</a>
