update notif, dashboard, beranda and font

--- a/index.html
+++ b/index.html
@@ -71,29 +71,43 @@
         <!-- Notif -->
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown notification-wrap no-arrow">
-            <a class="nav-link notif" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-bell fa-fw green"></i>
-                <!-- Counter - Alerts -->
-                <span class="badge badge-warning badge-counter navbar-badge"> </span>
-            </a>
-            <!-- Dropdown - Alerts -->
-            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
-                <h6 class="dropdown-header">
-                Alerts Center
-                </h6>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                    <div class="icon-circle bg-primary">
-                    <i class="fas fa-file-alt text-white"></i>
-                    </div>
-                </div>
-                <div>
-                    <div class="small text-gray-500">December 12, 2019</div>
-                    <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                </div>
-                </a>
-                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-            </div>
+              <a class="nav-link notif" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-bell fa-fw"></i>
+                  <!-- Counter - Alerts -->
+                  <span class="badge badge-warning badge-counter navbar-badge"> </span>
+              </a>
+              <!-- Dropdown - Alerts -->
+              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
+                  <h6 class="dropdown-header text-left green">
+                  Notifikasi
+                  </h6>
+                  <a class="dropdown-item d-flex align-items-center" href="#">
+                  <div>
+                      <span class="font-weight-bold">Approval Order</span>
+                      <p class="mb-1">Order telah di approve Kelompok Tani </p>
+                      <div class="small text-gray-500">03 Agustus 2020 09:30 WIB</div>
+                  </div>
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item d-flex align-items-center" href="#">
+                  <div>
+                      <span class="font-weight-bold">Approval Admin Timbangan</span>
+                      <p class="mb-1">Hasil timbangan telah diterima</p>
+                      <div class="small text-gray-500">03 Agustus 2020 09:30 WIB</div>
+                  </div>
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item d-flex align-items-center" href="#">
+                  <div>
+                      <span class="font-weight-bold">Approval Finance</span>
+                      <p class="mb-1">Transaksi sudah selesai..</p>
+                      <div class="small text-gray-500">03 Agustus 2020 09:30 WIB</div>
+                  </div>
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-center small text-gray-500" href="#">
+                      <i class="fa fa-ellipsis-h"></i></a>
+              </div>
             </li>
             <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -136,28 +150,40 @@
           <div class="container-fluid no-padding">
               <div class="card">
                   <div class="card-body">
-                      <div class="mb-4 col-md-12 no-padding">
-                        <div class="pl-0 col-md-6">
-                            <div class="highlight-price bg-hijau p-3 mr-2 col col-md-12">
-                              <div class="col col-md-7">
-                                <p class="small no-margin">Harga TBS wilayah Sumatera Utara</p>
+                        <div class="row mx-0 mb-4">
+                          <div class="col-6 mb-2 pl-0">
+                              <div class="p-3 mr-2 highlight-price-lg">
+                                  <p class="mb-2">Harga TBS Tanggal 30 September 2020</p>
+                                  <span class="h-price">Rp 1.377,25</span>
                               </div>
-                              <div class="text-right col-md-5">
-                                <b>Rp 1.377,25</b>
+                          </div>
+                          <div class="pr-0 col-6">
+                              <div class="highlight-price p-3 mb-2">
+                                <div class="col col-md-7">
+                                  <p class="small no-margin">Harga CPO berdasarkan index dari Malaysia</p>
+                                </div>
+                                <div class="text-right col-md-5">
+                                  <b>Rp 1.661,39/kg</b>
+                                </div>
                               </div>
-                            </div>
+                              <div class="highlight-price p-3 mb-2">
+                                <div class="col col-md-7">
+                                  <p class="small no-margin">Harga CPO berdasarkan index dari Rotterdam</p>
+                                </div>
+                                <div class="text-right col-md-5">
+                                  <b>Rp 1.290,00/kg</b>
+                                </div>
+                              </div>
+                              <div class="highlight-price p-3 mb-2">
+                                <div class="col col-md-7">
+                                  <p class="small no-margin">Harga CPO berdasarkan index dari Thailand</p>
+                                </div>
+                                <div class="text-right col-md-5">
+                                  <b>Rp 1.420,12/kg</b>
+                                </div>
+                              </div>
+                          </div>
                         </div>
-                        <div class="pr-0 col-md-6">
-                            <div class="highlight-price bg-hijau p-3 mr-2 col col-md-12">
-                              <div class="col col-md-7">
-                                <p class="small no-margin">Harga TBS wilayah Sumatera Utara</p>
-                              </div>
-                              <div class="text-right col-md-5">
-                                <b>Rp 1.377,25</b>
-                              </div>
-                            </div>
-                        </div>
-                      </div>
                       <div class="font-title align-items-center col-md-12">
                         <h6 class="col col-md-8 no-padding no-margin">Berita</h6>
                         <div class="col col-md-4 no-padding">
