--- a/petani.html
+++ b/petani.html
@@ -70,29 +70,43 @@
         <!-- Notif -->
         <ul class="navbar-nav ml-auto">
             <li class="nav-item dropdown notification-wrap no-arrow">
-            <a class="nav-link notif" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-bell fa-fw green"></i>
-                <!-- Counter - Alerts -->
-                <span class="badge badge-warning badge-counter navbar-badge"> </span>
-            </a>
-            <!-- Dropdown - Alerts -->
-            <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
-                <h6 class="dropdown-header">
-                Alerts Center
-                </h6>
-                <a class="dropdown-item d-flex align-items-center" href="#">
-                <div class="mr-3">
-                    <div class="icon-circle bg-primary">
-                    <i class="fas fa-file-alt text-white"></i>
-                    </div>
-                </div>
-                <div>
-                    <div class="small text-gray-500">December 12, 2019</div>
-                    <span class="font-weight-bold">A new monthly report is ready to download!</span>
-                </div>
-                </a>
-                <a class="dropdown-item text-center small text-gray-500" href="#">Show All Alerts</a>
-            </div>
+              <a class="nav-link notif" href="#" id="alertsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  <i class="fa fa-bell fa-fw"></i>
+                  <!-- Counter - Alerts -->
+                  <span class="badge badge-warning badge-counter navbar-badge"> </span>
+              </a>
+              <!-- Dropdown - Alerts -->
+              <div class="dropdown-list dropdown-menu dropdown-menu-right shadow animated--grow-in" aria-labelledby="alertsDropdown">
+                  <h6 class="dropdown-header text-left green">
+                  Notifikasi
+                  </h6>
+                  <a class="dropdown-item d-flex align-items-center" href="#">
+                  <div>
+                      <span class="font-weight-bold">Approval Order</span>
+                      <p class="mb-1">Order telah di approve Kelompok Tani </p>
+                      <div class="small text-gray-500">03 Agustus 2020 09:30 WIB</div>
+                  </div>
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item d-flex align-items-center" href="#">
+                  <div>
+                      <span class="font-weight-bold">Approval Admin Timbangan</span>
+                      <p class="mb-1">Hasil timbangan telah diterima</p>
+                      <div class="small text-gray-500">03 Agustus 2020 09:30 WIB</div>
+                  </div>
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item d-flex align-items-center" href="#">
+                  <div>
+                      <span class="font-weight-bold">Approval Finance</span>
+                      <p class="mb-1">Transaksi sudah selesai..</p>
+                      <div class="small text-gray-500">03 Agustus 2020 09:30 WIB</div>
+                  </div>
+                  </a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item text-center small text-gray-500" href="#">
+                      <i class="fa fa-ellipsis-h"></i></a>
+              </div>
             </li>
             <li class="nav-item dropdown no-arrow">
             <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
